# solanaroll

./: .gitignore  README.md  package.json
program/: package-lock.json  package.json
program/src/deploy/: deploy.js  main.js
program/src/deploy/util/: new-account-with-lamports.js
program/src/program-rust/: Cargo.toml  do.sh
program/src/program-rust/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  util.rs
src/: index.css
src/pages/: FundPage.js  PlayPage.js
src/util/: connection.tsx
ui/: package-lock.json
ui/public/: index.html  manifest.json
ui/src/: index.js
ui/src/pages/: PlayPage.js
