
[package]
name = "solanaroll"
version = "0.0.1"
description = "Solanaroll - fastest, cheapest on-chain dice game"
authors = ["Mike Tourigny <mike@solanaroll.com>"]
repository = "https://github.com/turnyay/solanaroll"
license = "Apache-2.0"
homepage = "https://solanaroll.com/"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default"]

# [dev-dependencies]
# solana-sdk = "1.4.5"

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
bytemuck = "1.4.0"
solana-sdk = { version = "1.4.5", default-features = false, optional = true }
byteorder = "1.3"
solana-program = "1.5.0"
thiserror = "1.0.21"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[lib]
name = "solanaroll"
crate-type = ["cdylib", "lib"]
